dev/tree-sitter/test/corpus/minml.txt
================================================================================
Empty source file
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Single word
================================================================================
Hello
--------------------------------------------------------------------------------

(source_file)

================================================================================
Text with non-letter characters
================================================================================
Hello 42!
--------------------------------------------------------------------------------

(source_file)

================================================================================
Basic element
================================================================================
em[hello]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content)))

================================================================================
Empty element
================================================================================
hr[]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content)))

================================================================================
Nested elements
================================================================================
p[em[hi]]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content
      (element
        name: (tag_name)
        content: (content)))))

================================================================================
Mixed text and element content
================================================================================
p[Hello em[world]]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content
      (element
        name: (tag_name)
        content: (content)))))

================================================================================
Attribute with plain value
================================================================================
img{src=cat.jpg}[]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    attributes: (attributes
      (attribute
        name: (attr_name)
        value: (value)))
    content: (content)))

================================================================================
Attribute with element value
================================================================================
a{href=http[//x.com/]}[click]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    attributes: (attributes
      (attribute
        name: (attr_name)
        value: (value
          (reference))))
    content: (content)))

================================================================================
Attribute with content block value
================================================================================
img{alt=[a cat]}[]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    attributes: (attributes
      (attribute
        name: (attr_name)
        value: (quoted_value)))
    content: (content)))

================================================================================
Multiple attributes separated by whitespace
================================================================================
img{src=cat.jpg alt=[a cat]}[]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    attributes: (attributes
      (attribute
        name: (attr_name)
        value: (value))
      (attribute
        name: (attr_name)
        value: (quoted_value)))
    content: (content)))

================================================================================
Named character reference
================================================================================
[reg]
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
Decimal character reference
================================================================================
[#174]
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
Hex character reference
================================================================================
[#xAE]
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
Char ref inside element content — not a content block
================================================================================
em[[reg]]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content
      (reference))))

================================================================================
Standalone bracket sequence is char ref not content block
================================================================================
[em]
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
Quoted string
================================================================================
"[hello said the cat]
--------------------------------------------------------------------------------

(source_file
  (element
    (tag_name)
    (content)))

================================================================================
Raw block
================================================================================
+[<b>bold</b>]
--------------------------------------------------------------------------------

(source_file
  (raw))

================================================================================
Comment
================================================================================
-[this is a comment]
--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Processing instruction
================================================================================
?[xml version=1.0]
--------------------------------------------------------------------------------

(source_file
  (element
    (tag_name)
    (content)))

================================================================================
Space sucker prefix
================================================================================
<em[hi]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content)))

================================================================================
Space sucker suffix
================================================================================
em[hi]>
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content)))

================================================================================
Both space suckers
================================================================================
<em[hi]>
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content)))

================================================================================
Matcher escape open square bracket
================================================================================
[[<]]
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
Matcher escape close square bracket
================================================================================
[[>]]
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
Matcher escape open paren bracket
================================================================================
[(<)]
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
Matcher escape close paren bracket
================================================================================
[(>)]
--------------------------------------------------------------------------------

(source_file
  (reference))

================================================================================
Multiple top-level elements
================================================================================
h1[Title] p[Body]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content))
  (element
    name: (tag_name)
    content: (content)))

================================================================================
Comment inline in element content
================================================================================
p[hello -[note] world]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content
      (comment))))

================================================================================
Raw block in element content
================================================================================
p[Raw: +[<b>bold</b>]]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content
      (raw))))

================================================================================
Comment with nested bracket pair
================================================================================
-[a comment with a [nested] pair]
--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Raw block with nested brackets
================================================================================
+[<html>[body]</html>]
--------------------------------------------------------------------------------

(source_file
  (raw))

================================================================================
Quoted string with nested brackets
================================================================================
"[a [quoted [nested]] string]
--------------------------------------------------------------------------------

(source_file
  (element
    (tag_name)
    (content
      (literal
        (reference)))))

================================================================================
Angle brackets in element content
================================================================================
p[2 < 3]
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content)))

================================================================================
Space-sucker prefix with space before tag is NOT a space sucker
================================================================================
< em[hi]>
--------------------------------------------------------------------------------

(source_file
  (element
    name: (tag_name)
    content: (content)))

================================================================================
Unclosed element bracket
:error
================================================================================
em[hello
--------------------------------------------------------------------------------

================================================================================
Unclosed element with only tag
:error
================================================================================
em[
--------------------------------------------------------------------------------

================================================================================
Attribute without value
:error
================================================================================
a{href}[link]
--------------------------------------------------------------------------------

================================================================================
Attribute with spaces around equals sign
:error
================================================================================
a{src = cat.jpg}[]
--------------------------------------------------------------------------------

================================================================================
HTML document type
================================================================================
![html]
p[x]
--------------------------------------------------------------------------------

(source_file
  (doctype)
  (element
    (tag_name)
    (content)))

================================================================================
XML document type
================================================================================
![xml]
svg[g[]]
--------------------------------------------------------------------------------

(source_file
  (doctype)
  (element
    (tag_name)
    (content
      (element
        (tag_name)
        (content)))))

================================================================================
Document type other than html and xml
:error
================================================================================
![svg]
--------------------------------------------------------------------------------

================================================================================
Document type after the start of the file
:error
================================================================================
p[x]
![html]
--------------------------------------------------------------------------------

================================================================================
Document type after a space
:error
================================================================================
 ![html]
--------------------------------------------------------------------------------
